[build-system]
requires = [
    "setuptools >= 65.5.1",
    "wheel >= 0.38.4"
]
build-backend = "setuptools.build_meta"

[project]
dependencies = ["click"]
description = "Python tool designed to assist with the creation and loading of Terraform templates using a JSON configuration file"
dynamic = ["version"]
name = "terratemplate"
readme = "readme.md"
requires-python = ">=3.6"

[project.scripts]
tftmpl-v = "terratemplate.terratemplate:cli"
tftmpl-load = "terratemplate.terratemplate:load_terraform_json"
tftmpl-gen = "terratemplate.terratemplate:generate_terraform_json"